package ObserverDesignPattern;

public interface ISubscriber {
    void update();
}
